<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Project-4</string>
    <string name="hello_world">Hello world!</string>

    <!-- Tab names -->
    <string name="title_section1">Job office</string>
    <string name="title_section2">Articles</string>
    <string name="title_section3">Events</string>
    <string name="title_section4">Profile</string>
    <string name="text">hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd
        vsjd hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    hhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhhdshfbskljadbhfsdfsdjfbhsgsjd vsjd
    </string>

    <!-- Text areas -->
    <string name="my_profile">My Profile</string>
    <string name="my_profile_general">General info</string>
    <string name="my_profile_skills">Skills</string>
    <string name="my_profile_personal">Personal info</string>
    <string name="my_profile_linkedIn">Link to LinkedIn</string>
    <string name="my_profile_cv">Generate CV</string>
    <string name="my_experiences">My Experiences</string>
    <string name="my_trainings">My Trainings</string>
    <string name="my_education">My Education</string>
    <string name="my_interests">My Interests</string>
    <string name="my_strong_sides">My Strong Sides</string>
    <string-array name="languages">
        <item>English</item>
        <item>Russian</item>
        <item>German</item>
        <item>Other</item>
    </string-array>
    <string-array name="interests">
        <item>Practice</item>
        <item>PartTimeJob</item>
        <item>Volantary</item>
    </string-array>
    <!-- Buttons -->
    <string name="btn_back">BACK</string>
    <string name="btn_attachment">ATTACHMENT</string>
    <string name="btn_send">SEND</string>
    <string name="btn_done">DONE</string>
    <string name="btn_gender">gender</string>
    <string name="btn_experience">experiences</string>
    <string name="btn_training">trainings</string>
    <string name="btn_education">education</string>
    <string name="btn_interests">interests</string>
    <string name="btn_strong_sides">strong sides</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">CANCEL</string>
    <string name="btn_link_profile">LINK TO PROFILE</string>
    <string name="btn_preview_cv">preview CV</string>
    <string name="btn_download_cv">download CV</string>
    <string name="btn_profile">Profile</string>

    <string name="link_to_linked_in">LinkedIn to My Profile</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_jsonparser">JSONParser</string>

</resources>
