<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="pl.byd.wsg.promand.project4.MainActivity2$PlaceholderFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:id="@+id/btn_back_profile_skills"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        android:textSize="25sp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_experience"
        android:background="@drawable/btn_styles"
        android:id="@+id/btn_skills_experience"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:height="50sp"
        android:textSize="23sp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_training"
        android:background="@drawable/btn_styles"
        android:id="@+id/btn_skills_training"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:height="50sp"
        android:textSize="23sp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_education"
        android:background="@drawable/btn_styles"
        android:id="@+id/btn_skills_education"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:height="50sp"
        android:textSize="23sp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"/>

</LinearLayout>