<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_back"
        android:id="@+id/btn_back_linked_in"
        android:layout_marginTop="70dp"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_to_linked_in"
        android:id="@+id/textView_linked_in"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:layout_marginTop="20dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_linked_name"
        android:hint="user name"
        android:layout_marginTop="20dp"
        android:textSize="25sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText_linked_password"
        android:hint="password"
        android:layout_marginTop="20dp"
        android:textSize="25sp"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_link_profile"
        android:id="@+id/btn_linked_in_done"
        android:layout_gravity="center"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        />
</LinearLayout>