<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"

    tools:context="pl.byd.wsg.promand.project4.MainActivity2$PlaceholderFragment">

    <TextView
        android:id="@+id/section_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Our_Custom_Theme"
        />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="pl.byd.wsg.promand.project4.MainActivity2$PlaceholderFragment">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_back"
            android:id="@+id/btn_back_profile_cv_main"
            android:layout_marginTop="70dp"
            android:textSize="30sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_preview_cv"
            android:id="@+id/btn_cv_main_preview"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:height="60dp"
            android:textSize="25sp"
            android:paddingLeft="26dp"
            android:paddingRight="26dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_download_cv"
            android:id="@+id/btn_cv_main_download"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:height="60dp"
            android:textSize="25sp"
            />

    </LinearLayout>

</RelativeLayout>
